# create-dotslash

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: archive.rs  fetch.rs  format.rs  github.rs  main.rs  target.rs
tools/: cargo-zigbuild  dotslash  update-dotslash.sh  zig
