[package]
name = "create-dotslash"
version = "0.1.1"
edition = "2024"
rust-version = "1.93"

[dependencies]
async-compression = { version = "0.4.42", default-features = false, features = ["tokio", "gzip", "bzip2"] }
async-tar = { version = "0.6.1", default-features = false, features = ["runtime-tokio"] }
async_zip = { version = "0.0.18", default-features = false, features = ["deflate"] }
base64 = "0.22.1"
blake3 = "1.8.5"
bytes = "1.12.1"
clap = { version = "4.6", features = ["derive"] }
cliclack = "0.5.5"
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
hmac-sha256 = "1.1.14"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
ruzstd = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.9"
tokio = { version = "1.52", features = ["rt", "sync"] }
xz = "0.4.6-rc.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
